added navbar section and landing page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css">
+        <title>Document</title>
+    </head>
 <body>
-    
+    <div class="image">
+        <div class="nav">
+            <ul id="nav1">
+                <div class="logo">
+                    <h3>Chain <span class="color">Smokers</span></h3>
+                </div>
+                <li id="nav"><a href="https://www.bandwagon.asia/articles/the-chainsmokers-five-best-collaborations">Features</a></li>
+                <li id="nav"><a href="https://www.celebritytalent.net/sampletalent/5768/the-chainsmokers/">Pricing</a></li>
+                <li id="nav"><a href="https://thechainsmokers.com/">About Us online</a></li>
+                <li id="nav"><a href="https://www.youtube.com/channel/UCq3Ci-h945sbEYXpVlw7rJg">Youtube Link</a></li>
+            </ul>
+        </div>
+        <!-- <img src="https://raw.githubusercontent.com/JAPHETHNYARANGA/Favorite-Band-project/main/images/chainsmokers.jpg" alt=""> -->
+        <div class="mid-section">
+            <h1>COLD PLAY</h1>
+            
+        </div>
+    </div>
 </body>
 </html>
