--- a/index.html
+++ b/index.html
@@ -31,5 +31,10 @@
         <p>Coldplay are a British rock band formed in London in 1996. Vocalist, rhythm guitarist and pianist Chris Martin, lead guitarist Jonny Buckland, bassist Guy Berryman, and drummer Will Champion met at University College London and began playing music together from 1996 to 1998, first calling themselves Pectoralz and then Starfish before finally changing their name to Coldplay. Their creative director and former manager Phil Harvey is considered the fifth member of the band.</p>
         
     </div>
+    <div class="band-section">
+        <div id="member1">
+            <img src="https://raw.githubusercontent.com/JAPHETHNYARANGA/Favorite-Band-project/main/images/AndrewTaggart.jpg" alt="member1" height="350px" width="350px" >
+            <p>Andrew Taggart (born on December 31, 1989 in Maine) is an American DJ, who makes up 1/2 of The Chainsmokers. After graduating from Syracuse University in 2012, he started the duo with Alex Pall by making music remixes of indie bands. The guys recorded two songs with Priyanka Chopra in 2013 and released their first single, “Selfie,” in Dec. of that year. The song was eventually passed on to Steve Aoki, and they signed to his label, Dim Mak records in 2014</p>
+    </div>
 </body>
 </html>
