added band member 2

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
             <img src="https://raw.githubusercontent.com/JAPHETHNYARANGA/Favorite-Band-project/main/images/AndrewTaggart.jpg" alt="member1" height="350px" width="350px" >
             <p>Andrew Taggart (born on December 31, 1989 in Maine) is an American DJ, who makes up 1/2 of The Chainsmokers. After graduating from Syracuse University in 2012, he started the duo with Alex Pall by making music remixes of indie bands. The guys recorded two songs with Priyanka Chopra in 2013 and released their first single, “Selfie,” in Dec. of that year. The song was eventually passed on to Steve Aoki, and they signed to his label, Dim Mak records in 2014</p>
             <button>Chat</button>
+        </div>
+        <div id="member2">
+            <img src="https://raw.githubusercontent.com/JAPHETHNYARANGA/Favorite-Band-project/main/images/member1.jpg" alt="member2" height="350px" width="350px">
+            <p>LAlex Pall was born on May 16, 1985 in New York City, New York, USA as Alexander Pall. He is an actor and composer, known for Words on Bathroom Walls (2020), Paris and Hardflip</p>
+            <button>Chat</button>
+        </div>
     </div>
 </body>
 </html>
