added favorite song section

--- a/index.html
+++ b/index.html
@@ -43,5 +43,17 @@
             <button>Chat</button>
         </div>
     </div>
+    <div class="song-section">
+        <div class="favoritesongs">
+            <h1>My All time Favorite songs</h1>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=YykjpeuMNEk&list=RDEMuf6htoZivPnz-ZIwGU0dDA&start_radio=1">Hymm For the weekend</a></li>
+                <li><a href="https://www.youtube.com/watch?v=VPRjCeoBqrI&list=RDEMuf6htoZivPnz-ZIwGU0dDA&index=2">A Sky Full of Stars</a></li>
+                <li><a href="https://www.youtube.com/watch?v=dvgZkm1xWPE">Viva La Vida</a></li>
+                <li><a href="https://www.youtube.com/watch?v=1G4isv_Fylg">Paradise</a></li>
+            </ul>
+        </div>
+       
+    </div>
 </body>
 </html>
