footer section added

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <li><a href="https://www.youtube.com/watch?v=1G4isv_Fylg">Paradise</a></li>
             </ul>
         </div>
-       
+        <button id="but"><a href="https://rateyourmusic.com/artist/coldplay"><strong>Click here to Get Complete Album</strong></a></button>
     </div>
 </body>
 </html>
