--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles.css">
-        <title>Document</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Document</title>
+</head>
 <body>
     <div class="image">
         <div class="nav">
@@ -26,6 +26,7 @@
             
         </div>
     </div>
+    
     <div class="about">
         <h3>About Us</h3>
         <p>Coldplay are a British rock band formed in London in 1996. Vocalist, rhythm guitarist and pianist Chris Martin, lead guitarist Jonny Buckland, bassist Guy Berryman, and drummer Will Champion met at University College London and began playing music together from 1996 to 1998, first calling themselves Pectoralz and then Starfish before finally changing their name to Coldplay. Their creative director and former manager Phil Harvey is considered the fifth member of the band.</p>
@@ -54,6 +55,9 @@
             </ul>
         </div>
         <button id="but"><a href="https://rateyourmusic.com/artist/coldplay"><strong>Click here to Get Complete Album</strong></a></button>
+    </div>
+    <div class="footer">
+        <p><small>www.coldplay.com @2021</small></p>
     </div>
 </body>
 </html>
